# satellite_tcp_emulator

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  requirements.txt  satellite_positions.py
emulator/: OneWeb  go.mod  go.sum  groundstations.txt
emulator/cmd/emulator/: main.go
emulator/cmd/tcp_metrics/: main.go  main_test.go
emulator/database/: database.go  database_test.go
emulator/docker/: docker.go  docker_test.go
emulator/flows/: Cargo.toml
emulator/flows/src/: main.rs
emulator/graph/: graph.go  graph_test.go
emulator/linkset/: linkset.go  linkset_test.go
emulator/orc/: orc.go  orc_test.go
emulator/plotting/: plotting.go
emulator/podman/: podman.go  podman_test.go
emulator/routing/: routing.go  routing_test.go
emulator/space/: Groundstation.go  Groundstation_test.go  space.go  space_test.go
emulator/tle/: tle.go
jsontodata/: main.py
