[package]
name = "flows"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
questdb-rs = "2.1.0"
rand_distr = "0.4.3"
rand = "0.8"
sysinfo = "0.26.4"
pidfd_getfd = "0.2.1"
libc = "0.2.135"
#nix = "0.25.0"
nell = "0.3.0"